<resources>

    <string name="app_name">FitApp</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Diary</string>
    <string name="menu_gallery">GPS Exercise</string>
    <string name="menu_slideshow">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="leftArrow"><![CDATA[<-]]></string>
    <string name="rightArrow"><![CDATA[->]]></string>
    <string name="tab1Title">Login credentials</string>
    <string name="tab2Title">Personal data</string>
    <string name="tab3Title">Select goal</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="emailEditText">E-mail address</string>
    <string name="passwordEditText">Password</string>
    <string name="diaryToday">Today</string>
    <string name="diaryConsumed">Consumed: kcals</string>
    <string name="diaryBurned">Burned: kcals</string>
    <string name="diaryRemaining">Remaining: kcals</string>
    <string name="goalLose">Lose</string>
    <string name="goalMaintain">Maintain</string>
    <string name="goalGain">Gain</string>
    <string name="uiDone">Done</string>
    <string name="goalWeight">"Weight goal: "</string>
    <string name="uiNextArrow"><![CDATA[->]]></string>
    <string name="sex">"Gender: "</string>
    <string name="labelBirthDate">"DOB (Year/Month/Day) "</string>
    <string name="labelWeightKg">Weight (kg)</string>
    <string name="labelHeightCm">Height (cm)</string>
    <string name="fill_all_input">Fill all input fields!</string>

    <string name="select_activity_type">Select activity type</string>
    <string name="title_activity_gps_exercise_viewer">Map</string>


</resources>
